feat: adds fixs /products/revenue-report
