# shop-api-golang/docs/swagger.json
@@ -407,7 +407,7 @@
                 }
             }
         },
-        "/products/revenue": {
+        "/products/revenue-report": {
             "get": {
                 "description": "Returns products sorted by total revenue (SUM of price * quantity per product)",
                 "produces": [
@@ -435,7 +435,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ListTotalRevenueResponse"
+                            "$ref": "#/definitions/dto.ListRevenueReportResponse"
                         }
                     }
                 }
@@ -942,7 +942,7 @@
                 }
             }
         },
-        "dto.ListTotalRevenueResponse": {
+        "dto.ListRevenueReportResponse": {
             "type": "object",
             "required": [
                 "data",
@@ -952,7 +952,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.TotalRevenueResponse"
+                        "$ref": "#/definitions/dto.RevenueReportResponse"
                     }
                 },
                 "total": {
@@ -1086,6 +1086,25 @@
                 }
             }
         },
+        "dto.RevenueReportResponse": {
+            "type": "object",
+            "required": [
+                "growth",
+                "revenue",
+                "title"
+            ],
+            "properties": {
+                "growth": {
+                    "$ref": "#/definitions/dto.GrowthResponse"
+                },
+                "revenue": {
+                    "type": "number"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.StatsOrderResponse": {
             "type": "object",
             "required": [
@@ -1111,25 +1130,6 @@
         "dto.TopCategoryResponse": {
             "type": "object",
             "properties": {
-                "revenue": {
-                    "type": "number"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.TotalRevenueResponse": {
-            "type": "object",
-            "required": [
-                "growth",
-                "revenue",
-                "title"
-            ],
-            "properties": {
-                "growth": {
-                    "$ref": "#/definitions/dto.GrowthResponse"
-                },
                 "revenue": {
                     "type": "number"
                 },
